k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
